# PicoPWM

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
.github/: copilot-instructions.md
.github/workflows/: pr-test.yml  release.yml
docs/: api.md  architecture.md  build.md  firmware_interfaces.md  hardware.md  index.md  protocol.md
docs/detail/: hw_pwm_design.md  pio_pwm_design.md  pwm_driver_design.md  sw_pwm_design.md
firmware/: CMakeLists.txt
firmware/src/: cdc_cmd.c  cdc_cmd.h  cmd_parser.c  cmd_parser.h  control.c  control.h  i2c_slave.c  i2c_slave.h  main.c  pwm_core.c
firmware/src/cli/: cli_shell.c  cli_shell.h  device_cli.c  device_cli.h
firmware/src/control/: control_iface.c  control_iface.h
firmware/src/driver/: led.c  led.h  system.c  system.h
firmware/src/i2c/: i2c_control_map.c  i2c_control_map.h  i2c_slave.c  i2c_slave.h
firmware/src/pwmdriver/: hw_pwm_driver.c  hw_pwm_driver.h  monitor_gpio_common.h  pio_pwm_driver.c  pio_pwm_driver.h  pio_pwm_driver.pio  pwm_driver.c  pwm_driver.h  pwm_driver_internal.h  sw_pwm_driver.c  sw_pwm_driver.h
firmware/src/pwmdriver/hw/: generator.c  generator.h  monitor.c  monitor.h
firmware/src/pwmdriver/pio/: generator.c  generator.h  generator.pio  monitor.c  monitor.h  monitor.pio
firmware/src/pwmdriver/sw/: generator.c  generator.h  monitor.c  monitor.h
firmware/src/usb/: usb_cdc.c  usb_cdc.h  usb_descriptors.c
src/: cdc_cmd.c  cmd_parser.c  control.c  control.h  hw_pwm.c  hw_pwm.h  main.c  pwm_core.c  pwm_core.h  sw_pwm.c  sw_pwm.h
tools/linux/: build.sh  coverage.sh  load.sh  test.sh
tools/windows/: build.ps1  coverage.ps1  load.ps1  test.ps1
